--- a/widgets/mixer/mixer.css
+++ b/widgets/mixer/mixer.css
@@ -1,13 +1,94 @@
-body {
-    background-color:black;
+@font-face {
+    font-family: 'geistsemibold';
+    src: url('geist-semibold-webfont.woff2') format('woff2'),
+         url('geist-semibold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
 }
+
+body {
+    background-image: url('bg.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+}
+
+
 
 .volumebx {
     display: flex;
     flex-direction: column;
 }
 
-.volbutton  {
+.volupbutton  {
+    width: 45px;
+    height: auto;
+
+    transition: all ease-in-out 200ms;
+}
+
+.volupbutton:hover {
+    scale: 1.03;
+}
+
+.voldownbutton  {
+    width: 45px;
+    height: auto;
+
+    transition: all ease-in-out 200ms;
+
+}
+
+.voldownbutton:hover {
+    scale: 1.03;
+}
+
+.voldivbar  {
     width: 45px;
     height: auto;
 }
+
+.mixercard {
+    display: inline-flex;
+    padding: 8px 9px;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    border-radius: 10px;
+    border: 2px solid #FFF;
+}
+
+.soundbg {
+    width: 257px;
+    height: auto;
+}
+
+p.mixertext {
+    position: absolute;
+    color: white;
+    font-family: 'geistsemibold';
+    font-size: 21.32px;
+    margin-left: 100px;
+    padding-top: 12px;
+}
+
+.soundbx {
+    translate: 0px 2px;
+}
+
+
+.mixer {
+    display: inline-flex;
+    padding: 18px 16px;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 18px;
+    border-radius: 20px;
+    border: 2px solid #FFF;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 0.01) 100%);
+    backdrop-filter: blur(19.850000381469727px);
+}
+
